RESOLVED FIXED182354
REGRESSION(r220094): com.apple.WebKit.Storage lost its sandbox
https://bugs.webkit.org/show_bug.cgi?id=182354
Summary REGRESSION(r220094): com.apple.WebKit.Storage lost its sandbox
Brent Fulgham
Reported 2018-01-31 15:05:32 PST
When the Database process was renamed to the Storage process (<http://trac.webkit.org/changeset/220094>), the name of the sandbox was changed but the actual sandbox file was not renamed. The preprocessing steps to generate the sandbox profile were also not updated for the new naming.
Attachments
Patch (30.12 KB, patch)
2018-01-31 15:19 PST, Brent Fulgham
rniwa: review+
Brent Fulgham
Comment 1 2018-01-31 15:06:02 PST
Brent Fulgham
Comment 2 2018-01-31 15:08:30 PST
I guess this should be "Part 4 of: Rename DatabaseProcess to StorageProcess" :-)
Brent Fulgham
Comment 3 2018-01-31 15:19:40 PST
Brent Fulgham
Comment 4 2018-01-31 15:56:14 PST
Brent Fulgham
Comment 5 2018-02-05 12:27:39 PST
Note You need to log in before you can comment on or make changes to this bug.