Follow-up to r227939. https://bugs.webkit.org/show_bug.cgi?id=182354 <rdar://problem/37046844>

Make sure the correct sandbox is used on iOS as well.

* StorageProcess/ios/StorageProcessIOS.mm:
(WebKit::StorageProcess::initializeSandbox):



Canonical link: https://commits.webkit.org/198163@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227941 268f45cc-cd09-0410-ab3c-d52691b4dbfc