Source/WebKit/StorageProcess/ios/StorageProcessIOS.mm
@@ -53,7 +53,7 @@ void StorageProcess::initializeSandbox(const ChildProcessInitializationParameter
 #if ENABLE_MANUAL_DATABASE_SANDBOXING
     // Need to override the default, because service has a different bundle ID.
     NSBundle *webkit2Bundle = [NSBundle bundleForClass:NSClassFromString(@"WKWebView")];
-    sandboxParameters.setOverrideSandboxProfilePath([webkit2Bundle pathForResource:@"com.apple.WebKit.Databases" ofType:@"sb"]);
+    sandboxParameters.setOverrideSandboxProfilePath([webkit2Bundle pathForResource:@"com.apple.WebKit.Storage" ofType:@"sb"]);
     ChildProcess::initializeSandbox(parameters, sandboxParameters);
 #endif
 }
